refactor: consolidate public extraction API